# sen0177-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: linux-serial.rs
src/: i2c.rs  lib.rs  read.rs  serial.rs
