[package]
name = "sen0177"
description = "Read air quality data from the SEN0177 and PMSA003I sensors"
version = "0.5.1-alpha.1"
authors = ["Brian J. Tarricone <brian@tarricone.org>"]
homepage = "https://github.com/kelnos/sen0177-rs"
repository = "https://github.com/kelnos/sen0177-rs"
license = "Apache-2.0"
readme = "README.md"
categories = [ "embedded", "hardware-support", "no-std" ]
keywords = [ "air-quality", "embedded-hal", "sensor", "sen0177", "pmsa003i" ]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Provides impl for std types like std::error::Error
std = []

[dependencies]
embedded-hal = "=1.0.0-rc.1"
embedded-hal-nb = "=1.0.0-rc.1"

[dev-dependencies]
anyhow = "1"
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal", rev = "27daf71e8ee22ff2b33fca5972a47dd139de69e2" }
serial = "0.4"
